styling and fix edit page
styling and fix edit page

--- a/css/global.css
+++ b/css/global.css
@@ -52,6 +52,7 @@ a:hover{
 .btn{    
     color:var(--Primary-color);
     background-color: var(--Secondary-color);
+    font-weight: bold;
 }
 
 .btn:hover{
