--- a/css/posts.css
+++ b/css/posts.css
@@ -11,10 +11,20 @@
     --Accent-color-6: #ecd14b;
 }
 
+body, a{
+    font-family: "Montserrat", sans-serif !important;
+}
+
+h1{
+    color: var(--Secondary-color);
+    font-weight: bolder;
+    font-family: "Playwrite IT Moderna", cursive;
+}
+
 img{
     border-radius: 50%;
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
 }
 
 .Btn {
@@ -104,3 +114,12 @@ img{
 .nav:hover{
     color: var(--Accent-color-6);
 }
+
+.navbar-toggler{
+    border: transparent;
+}
+
+.navbar-toggler:focus{
+    box-shadow: none;
+}
+
